--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <section id="om-oss">
     <h2>Om Oss</h2>
-    <p>Vi er en familiedrevet taverna som fokuserer på å tilby våre gjester en uforglemmelig opplevelse med god mat, øl og vennlig service. Vårt bryggeri er kjent for å skape unike brygg som passer for enhver smak.</p>
+    <p>Vi er en familiedrevet taverna som fokuserer på å tilby våre gjester en uforglemmelig dag med mye godt øl og vennlig service. Vårt bryggeri er kjent for å skape unike brygg som passer for enhver smak.</p>
     <p>Vår filosofi er enkel: Kvalitet, fellesskap, og en lidenskap for smak. Vi inviterer deg til å prøve våre spesialiteter og bli en del av vårt fellesskap av tavernaelskere.</p>
     <p>Kom og nyt en uforglemmelig opplevelse her hos oss, hvor tradisjon og innovasjon møtes for å gi deg den beste mulige tavernaopplevelsen.</p>
   </section>
@@ -39,10 +39,11 @@
   <section id="utvalgt-brygg">
     <h2>Utvalgt Brygg: Dreamweaver's Delight</h2>
     <p>En fantastisk opplevelse for smaksløkene! "Dreamweaver's Delight" kombinerer de fineste ingrediensene for å skape et godt brygg. Vi har også mange andre forskjellige slag inne på tapp.</p>
+    <p>Som det er bilde av her:</p>
     <img src="design\5408689.jpg"/> <img src="design\852275.jpg"/> <img src="design\4010.jpg"/> <img src="design\4473.jpg"/> <img src="design\9657.jpg"/> 
     <p><img src="design\5850paci.jpg"/> <img src="design\3426290black.jpg"/> <img src="design\7Night.jpg"/> <img src="design\10xx.jpg"/> <img src="design\30Old-ras.jpg"/></p>
     <p><img src="design\18974.jpg"/> <img src="design\2274033.jpg"/> <img src="design\4456396.jpg"/> <img src="design\5862.jpg"/> <img src="design\74christmas.jpg"/></p>
-    <p><img src="design\beer-31284_1287a_hd.jpeg"/> <img src=""/></p>
+    <p><img src="design\beer-31284_1287a_hd.jpeg"/> 
 </section>
 
 <section id="Kontakt">
