--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
-</body>
-</html>
 
 <header>
     <h1>The Tipsy Troll Tavern</h1>
@@ -40,10 +36,14 @@
     <h2>Utvalgt Brygg: Dreamweaver's Delight</h2>
     <p>En fantastisk opplevelse for smaksløkene! "Dreamweaver's Delight" kombinerer de fineste ingrediensene for å skape et godt brygg. Vi har også mange andre forskjellige slag inne på tapp.</p>
     <p>Som det er bilde av her:</p>
-    <img src="design\5408689.jpg"/> <img src="design\852275.jpg"/> <img src="design\4010.jpg"/> <img src="design\4473.jpg"/> <img src="design\9657.jpg"/> 
-    <p><img src="design\5850paci.jpg"/> <img src="design\3426290black.jpg"/> <img src="design\7Night.jpg"/> <img src="design\10xx.jpg"/> <img src="design\30Old-ras.jpg"/></p>
-    <p><img src="design\18974.jpg"/> <img src="design\2274033.jpg"/> <img src="design\4456396.jpg"/> <img src="design\5862.jpg"/> <img src="design\74christmas.jpg"/></p>
-    <p><img src="design\beer-31284_1287a_hd.jpeg"/> 
+    <img src="./images\5408689.jpg"/> 
+    <img src="./images\852275.jpg"/> 
+    <img src="./images\4010.jpg"/> 
+    <img src="./images\4473.jpg"/> 
+    <img src="./images\9657.jpg"/> 
+    <div><img src="./images\5850paci.jpg"/> <img src="./images\3426290black.jpg"/> <img src="./images\7Night.jpg"/> <img src="./images\10xx.jpg"/> <img src="./images\30Old-ras.jpg"/></div>
+    <div><img src="./images\18974.jpg"/> <img src="./images\2274033.jpg"/> <img src="./images\4456396.jpg"/> <img src="./images\5862.jpg"/> <img src="./images\74christmas.jpg"/></div>
+    <div><img src="./images\beer-31284_1287a_hd.jpeg"/></div>
 </section>
 
 <section id="Kontakt">
