--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -11,10 +11,10 @@
     <h1>The Tipsy Troll Tavern</h1>
     <nav>
         <ul>
-            <li><a href="#hero">Hjem</a></li>
-            <li><a href="#featured-brew">Brygg</a></li>
-            <li><a href="#about">Om oss</a></li>
-            <li><a href="#contact">Kontakt</a></li>
+            <li><a href="./#hero">Hjem</a></li>
+            <li><a href="./#featured-brew">Brygg</a></li>
+            <li><a href="./#about">Om oss</a></li>
+            <li><a href="./#contact">Kontakt</a></li>
         </ul>
     </nav>
 </header>
@@ -22,7 +22,7 @@
 <section id="hero">
     <h2>Velkommen til vår viking bar!</h2>
     <p>Kom og smak på eventyrets smaker av forskjellige typer øl.</p>
-    <img src="design\funny_tavern_names.webp" alt="Tipsy Troll Tavern" />
+    <img src="./images\funny_tavern_names.webp" alt="Tipsy Troll Tavern" />
 </section>
 
 <section id="om-oss">
@@ -50,7 +50,7 @@
     <h2>Kontakt oss</h2>
     <p>Hvis det er noe dere lurer på ikke nøl med å ta kontakt med oss</p>
     <p>Våre åpningstider: Tirsdag-Lørdag</p>
-    </p>12:00-01:30</p>
+    <p>12:00-01:30<p>
     <form action="#" method="post">
         <label for="name">Navn:</label>
         <input type="text" id="navn" name="navn" required>
@@ -70,6 +70,7 @@
 <footer>
     <p>&copy; 2024 Tipsy Troll Tavern | All rights reserved. Sondre-sfj</p>
 </footer>
-</body>
+
+
 </html>
 
